[gd_scene load_steps=32 format=3 uid="uid://caqp2s3n5m7og"]

[ext_resource type="Script" path="res://Scripts/UI/UIController.gd" id="1_xx844"]
[ext_resource type="Texture2D" uid="uid://7m8jcppj3qxf" path="res://Sprites/UI/UI_Bar.png" id="2_dg3mu"]
[ext_resource type="Texture2D" uid="uid://4418kp8ve5dl" path="res://Sprites/UI/Controller_Bar.png" id="2_smda5"]
[ext_resource type="Script" path="res://Scripts/ControllerKnob.gd" id="4_4ghb5"]
[ext_resource type="Texture2D" uid="uid://d41lhg4cd8f5" path="res://Sprites/UI/Controller_Slider.png" id="4_rat24"]
[ext_resource type="Texture2D" uid="uid://c0enpbnbymdae" path="res://Sprites/UI/VArrowAnim.tres" id="5_p0w2o"]
[ext_resource type="AudioStream" uid="uid://cs2535saxrxko" path="res://Audio/Effects/vClick.wav" id="5_wvpgk"]
[ext_resource type="AudioStream" uid="uid://dr0jrb63pe81o" path="res://Audio/Effects/hClick.wav" id="6_e5b5s"]
[ext_resource type="Texture2D" uid="uid://d3eyl0vusejm7" path="res://Sprites/UI/HArrowAnim.tres" id="6_evgpq"]
[ext_resource type="Texture2D" uid="uid://ptkdgjer25b2" path="res://Sprites/UI/Fake_Controller.png" id="6_r22wt"]
[ext_resource type="Script" path="res://Scripts/UI/TexButton.gd" id="8_5avfk"]
[ext_resource type="Texture2D" uid="uid://dl0bhdebrb7lg" path="res://Sprites/UI/GrabButton.png" id="8_ddaej"]
[ext_resource type="Texture2D" uid="uid://dm1dxhtiv5nix" path="res://Sprites/UI/Controller_Knob.png" id="8_uyfte"]
[ext_resource type="Texture2D" uid="uid://dhesxsyiv0sx0" path="res://Sprites/UI/DropButton.png" id="9_tvu8m"]
[ext_resource type="Texture2D" uid="uid://dgpocy10jhlnd" path="res://Sprites/UI/GrabButton_Press.png" id="10_nmjlf"]
[ext_resource type="Texture2D" uid="uid://bwvn7if86ypng" path="res://Sprites/UI/DropButton_Press.png" id="11_no82r"]
[ext_resource type="Texture2D" uid="uid://crwh0byps6dr6" path="res://Sprites/UI/PauseButton.png" id="13_risul"]
[ext_resource type="Texture2D" uid="uid://8ecd75ndi1ic" path="res://Sprites/UI/PauseButton_Press.png" id="14_jssxh"]
[ext_resource type="Texture2D" uid="uid://dyebnlvtlkauh" path="res://Sprites/UI/ResumeButton.png" id="15_qvrwc"]
[ext_resource type="Texture2D" uid="uid://t6fn564y2b0w" path="res://Sprites/UI/ButtonHighlight.png" id="15_tyhih"]
[ext_resource type="Texture2D" uid="uid://ilnbhogat2uy" path="res://Sprites/UI/ResumeButton_press.png" id="16_ns2xl"]
[ext_resource type="Texture2D" uid="uid://cu6ajfwx8jdol" path="res://Sprites/UI/Empty.png" id="16_t7ftd"]
[ext_resource type="StyleBox" uid="uid://wny360jhf3cn" path="res://Materials/MenuPanelStyle.tres" id="22_4vf6d"]
[ext_resource type="Texture2D" uid="uid://cjnr1tav6ua03" path="res://Sprites/UI/RestartButton.png" id="23_orjxc"]
[ext_resource type="Texture2D" uid="uid://7m33ey4h1lpe" path="res://Sprites/UI/LvlSelectButton.png" id="24_6bvcd"]
[ext_resource type="FontFile" uid="uid://dnoqi8fg1yacv" path="res://Fonts/HelvetiPixel_by_pentacom.ttf" id="25_71nlq"]
[ext_resource type="Texture2D" uid="uid://iuxjyva1rj8i" path="res://Sprites/UI/SpecialButton.png" id="26_ovhgx"]
[ext_resource type="Texture2D" uid="uid://jruii4sd3hi8" path="res://Sprites/UI/SpecialButton_Press.png" id="27_x0kss"]
[ext_resource type="AudioStream" uid="uid://dg7civ3l4w3j7" path="res://Audio/Effects/EmptyGrab.wav" id="28_ocxjc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h1lgf"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_y66sv"]
frames = 2
frame_0/texture = ExtResource("15_tyhih")
frame_0/duration = 0.5
frame_1/texture = ExtResource("16_t7ftd")
frame_1/duration = 0.5

[node name="UIController" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_xx844")

[node name="MenuButtons" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuButtons"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_right = 40.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = -6
alignment = 2

[node name="MainMenuButton" type="Panel" parent="MenuButtons/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("22_4vf6d")
metadata/_edit_use_anchors_ = true

[node name="MMTexture" type="TextureRect" parent="MenuButtons/VBoxContainer/MainMenuButton"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.0
offset_right = 16.0
offset_bottom = 11.0
grow_vertical = 2
texture = ExtResource("24_6bvcd")
stretch_mode = 5

[node name="Button" type="Button" parent="MenuButtons/VBoxContainer/MainMenuButton"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_colors/font_hover_color = Color(0.25098, 0.25098, 0.25098, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("25_71nlq")
theme_override_styles/focus = ExtResource("22_4vf6d")
theme_override_styles/disabled = ExtResource("22_4vf6d")
theme_override_styles/hover = ExtResource("22_4vf6d")
theme_override_styles/pressed = ExtResource("22_4vf6d")
theme_override_styles/normal = ExtResource("22_4vf6d")
text = "Main Menu"
alignment = 2

[node name="RestartButton" type="Panel" parent="MenuButtons/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("22_4vf6d")
metadata/_edit_use_anchors_ = true

[node name="RestartTexture" type="TextureRect" parent="MenuButtons/VBoxContainer/RestartButton"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.0
offset_right = 16.0
offset_bottom = 11.0
grow_vertical = 2
texture = ExtResource("23_orjxc")
stretch_mode = 5

[node name="Button" type="Button" parent="MenuButtons/VBoxContainer/RestartButton"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_colors/font_hover_color = Color(0.25098, 0.25098, 0.25098, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("25_71nlq")
theme_override_styles/focus = ExtResource("22_4vf6d")
theme_override_styles/disabled = ExtResource("22_4vf6d")
theme_override_styles/hover = ExtResource("22_4vf6d")
theme_override_styles/pressed = ExtResource("22_4vf6d")
theme_override_styles/normal = ExtResource("22_4vf6d")
text = "Restart    "
alignment = 2

[node name="FakeController" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 8.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("6_r22wt")
stretch_mode = 3

[node name="ControllerBG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_dg3mu")
stretch_mode = 3
flip_v = true

[node name="ControllerBar" type="TextureRect" parent="ControllerBG"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 1.0
offset_bottom = 17.0
grow_horizontal = 2
texture = ExtResource("2_smda5")
stretch_mode = 3

[node name="Slider" type="Control" parent="ControllerBG/ControllerBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="SliderSprite" type="TextureRect" parent="ControllerBG/ControllerBar/Slider"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_rat24")
stretch_mode = 3

[node name="Knob" type="Control" parent="ControllerBG/ControllerBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("4_4ghb5")

[node name="Arrows" type="Control" parent="ControllerBG/ControllerBar/Knob"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Up" type="TextureRect" parent="ControllerBG/ControllerBar/Knob/Arrows"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -16.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_p0w2o")
stretch_mode = 3

[node name="Down" type="TextureRect" parent="ControllerBG/ControllerBar/Knob/Arrows"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -8.0
offset_right = 8.0
offset_bottom = 16.0
grow_horizontal = 2
texture = ExtResource("5_p0w2o")
stretch_mode = 3
flip_v = true

[node name="Left" type="TextureRect" parent="ControllerBG/ControllerBar/Knob/Arrows"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -17.0
offset_top = -8.0
offset_right = -1.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("6_evgpq")
stretch_mode = 3
flip_h = true
flip_v = true

[node name="Right" type="TextureRect" parent="ControllerBG/ControllerBar/Knob/Arrows"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -8.0
offset_right = 17.0
offset_bottom = 8.0
grow_vertical = 2
texture = ExtResource("6_evgpq")
stretch_mode = 3
flip_v = true

[node name="KnobSprite" type="TextureRect" parent="ControllerBG/ControllerBar/Knob"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_uyfte")
stretch_mode = 3

[node name="Area2D" type="Area2D" parent="ControllerBG/ControllerBar/Knob"]
collision_layer = 16
collision_mask = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ControllerBG/ControllerBar/Knob/Area2D"]
shape = SubResource("CircleShape2D_h1lgf")

[node name="VertClick_SFX" type="AudioStreamPlayer" parent="ControllerBG/ControllerBar/Knob"]
stream = ExtResource("5_wvpgk")
volume_db = -6.0
bus = &"SFX"

[node name="HorizClick_SFX" type="AudioStreamPlayer" parent="ControllerBG/ControllerBar/Knob"]
stream = ExtResource("6_e5b5s")
volume_db = -6.0
bus = &"SFX"

[node name="GrabButton" type="TextureButton" parent="ControllerBG/ControllerBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -8.0
offset_right = -2.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1
texture_normal = ExtResource("8_ddaej")
stretch_mode = 3
script = ExtResource("8_5avfk")
normal_tex = ExtResource("8_ddaej")
normal_tex_press = ExtResource("10_nmjlf")
alt_tex = ExtResource("9_tvu8m")
alt_tex_press = ExtResource("11_no82r")
is_grab_button = true
press_sfx_path = NodePath("../UIButton_SFX")

[node name="Highlight" type="TextureRect" parent="ControllerBG/ControllerBar/GrabButton"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AnimatedTexture_y66sv")

[node name="Arrow" type="TextureRect" parent="ControllerBG/ControllerBar/GrabButton"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = 2.0
offset_right = 8.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_p0w2o")
stretch_mode = 3

[node name="PauseButton" type="TextureButton" parent="ControllerBG/ControllerBar"]
process_mode = 3
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -8.0
offset_right = 18.0
offset_bottom = 8.0
grow_vertical = 2
scale = Vector2(1, 1.00428)
mouse_filter = 1
texture_normal = ExtResource("13_risul")
script = ExtResource("8_5avfk")
normal_tex = ExtResource("13_risul")
normal_tex_press = ExtResource("14_jssxh")
alt_tex = ExtResource("15_qvrwc")
alt_tex_press = ExtResource("16_ns2xl")
press_sfx_path = NodePath("../UIButton_SFX")

[node name="UIButton_SFX" type="AudioStreamPlayer" parent="ControllerBG/ControllerBar"]
stream = ExtResource("5_wvpgk")
volume_db = -6.0
bus = &"SFX"

[node name="SpecialButton" type="TextureButton" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -16.0
offset_bottom = 16.0
grow_horizontal = 0
mouse_filter = 1
texture_normal = ExtResource("26_ovhgx")
texture_pressed = ExtResource("27_x0kss")
stretch_mode = 3

[node name="ButtonClickSFX" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("28_ocxjc")

[node name="SpecialClickSFX" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("5_wvpgk")

[connection signal="reset_elements" from="." to="ControllerBG/ControllerBar/Knob" method="reset_knob"]
[connection signal="reset_elements" from="." to="ControllerBG/ControllerBar/GrabButton" method="reset_state"]
[connection signal="reset_elements" from="." to="ControllerBG/ControllerBar/PauseButton" method="reset_state"]
[connection signal="button_up" from="MenuButtons/VBoxContainer/MainMenuButton/Button" to="." method="on_mainmenu_pressed"]
[connection signal="button_up" from="MenuButtons/VBoxContainer/RestartButton/Button" to="." method="on_restart_pressed"]
[connection signal="h_dir_changed" from="ControllerBG/ControllerBar/Knob" to="." method="on_h_slider_changed"]
[connection signal="v_dir_changed" from="ControllerBG/ControllerBar/Knob" to="." method="on_v_slider_changed"]
[connection signal="mouse_entered" from="ControllerBG/ControllerBar/Knob/Area2D" to="ControllerBG/ControllerBar/Knob" method="mouse_entered"]
[connection signal="mouse_exited" from="ControllerBG/ControllerBar/Knob/Area2D" to="ControllerBG/ControllerBar/Knob" method="mouse_exited"]
[connection signal="button_up" from="ControllerBG/ControllerBar/GrabButton" to="." method="on_grab_pressed"]
[connection signal="button_up" from="ControllerBG/ControllerBar/GrabButton" to="ControllerBG/ControllerBar/GrabButton" method="swap_button_texture"]
[connection signal="button_up" from="ControllerBG/ControllerBar/PauseButton" to="." method="on_pause_pressed"]
[connection signal="button_up" from="ControllerBG/ControllerBar/PauseButton" to="ControllerBG/ControllerBar/PauseButton" method="swap_button_texture"]
[connection signal="pressed" from="SpecialButton" to="." method="on_special_pressed"]
